--- a/.travis.yml
+++ b/.travis.yml
@@ -14,13 +14,13 @@ script:
 after_success:
   - if [ "$TRAVIS_BRANCH" == "master" ]; then
     docker login --username=_ --password="$HEROKU_AUTH_TOKEN" registry.heroku.com;
-    docker tag web registry.heroku.com/offerings-be-prod/web;
-    docker push registry.heroku.com/offerings-be-prod/web;
+    docker tag web registry.heroku.com/offerings_be-prod/web;
+    docker push registry.heroku.com/offerings_be-prod/web;
     fi
   - if [ "$TRAVIS_BRANCH" == "qa" ]; then
     docker login --username=_ --password="$HEROKU_AUTH_TOKEN" registry.heroku.com;
-    docker tag web registry.heroku.com/offerings-be-qa/web;
-    docker push registry.heroku.com/offerings-be-qa/web;
+    docker tag web registry.heroku.com/offerings_be-qa/web;
+    docker push registry.heroku.com/offerings_be-qa/web;
     fi
 
 notifications:
