added a new config file (ci.py) for testing.  When pytest is ran according to the readme file, pytest will read the pytest.ini file and run the tests based on the ci settings.  All 3 endpoints now have one passing GET test.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,8 @@ services:
     restart: always
     environment:
       - DJANGO_SECRET_KEY=local
+      # - DJANGO_SETTINGS_MODULE=offerings_be.config.common
+      # - DJANGO_CONFIGURATION=Common
     image: web
     build: ./
     command: >
