--- a/requirements.txt
+++ b/requirements.txt
@@ -41,3 +41,7 @@ coverage==4.5.2
 # Static and Media Storage
 django-storages==1.7.1
 boto3==1.9.83
+
+#Django-phone-number
+django-phonenumber-field
+phonenumbers
